gnu/usr.bin/binutils/gas/testsuite/gas/cris/pic-err-2.s
; Check that --pic isn't recognized for a.out files, specified by emulation.

; { dg-do assemble { target cris-*-* } }
; { dg-options "--pic --em=crisaout" }
; { dg-error ".* --pic is invalid" "" { target cris-*-* } 0 }
 nop
